<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">



            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="132dp"
                    android:layout_height="50dp"
                    android:text="Choose exercise"
                    android:textColor="#000"
                    android:textSize="20dp"

                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="6dp" />

                <EditText
                    android:id="@+id/exercise_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/LinearLayout2"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:text="Weight"
                    android:textColor="#000"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="6dp" />

                <EditText
                    android:id="@+id/exercise_weight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="kg"
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="6dp" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="30dp"
                    android:text="Reps"
                    android:textColor="#000"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="6dp" />

                <EditText
                    android:id="@+id/exercise_reps"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/LinearLayout1"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="horizontal">





            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="27dp"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/canel_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="Canel"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    app:backgroundTint="#D2FF0000" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="Save"

                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    app:backgroundTint="#42A658" />


            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"


            android:layout_height="160dp"

            android:layout_weight="2">



        </RelativeLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


